--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Записи в блоге</h1>
+    <h1>Записи в журнале самочувствия</h1>
     {% if current_user.is_authenticated %}
         <a href="news" class="btn btn-secondary">Добавить сегодняшнее самочувствие</a>
     {% endif %}
