007 super-puper mvp v1.2

--- a/templates/news.html
+++ b/templates/news.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Добавление самочувствия</h1>
+    <h1>Добавление записи</h1>
     <form action="" method="post">
         {{ form.hidden_tag() }}
         <p>
