--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,9 @@
 <body>
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">HEALTH TRACKER</a>
+        <p><a href="/"><img src="{{ url_for('static', filename='images/logo.png') }}" height="50" alt="Italian Trulli"></p>
+
+<!--        <a class="navbar-brand" href="#">HEALTH TRACKER</a>-->
         {% if current_user.is_authenticated %}
             <a class="nav-link ml-auto" href="/logout">{{ current_user.name }}</a>
         {% else %}
