--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
-<html>
+{% extends "base.html" %}
+
+{% block content %}
 <head>
     <title>Вход в систему</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
-    <link rel="stylesheet" href="styles4login.css">
+<!--    <link rel="stylesheet" href="styles4login.css">-->
     <style>
         body {
             font-family: 'Montserrat', sans-serif;
@@ -57,22 +58,29 @@
 
     </style>
 </head>
-<body>
-<header>
-    <h1>Вход в систему HEALTH TRACKER</h1>
-</header>
-<main>
-    <form class="login-form" method="POST" action="/login">
-        <div class="input-group">
-            <label for="email">Адрес электронной почты:</label>
-            <input type="text" id="email" name="email">
-        </div>
-        <div class="input-group">
-            <label for="password">Пароль:</label>
-            <input type="password" id="password" name="password">
-        </div>
-        <button type="submit">Войти</button>
+    <h1>Авторизация</h1>
+    <form action="" method="post">
+        {{ form.hidden_tag() }}
+        <p>
+            {{ form.email.label }}<br>
+            {{ form.email(class="form-control", type="email") }}<br>
+            {% for error in form.email.errors %}
+                <div class="alert alert-danger" role="alert">
+                    {{ error }}
+                </div>
+            {% endfor %}
+        </p>
+        <p>
+            {{ form.password.label }}<br>
+            {{ form.password(class="form-control", type="password") }}<br>
+            {% for error in form.password.errors %}
+                <div class="alert alert-danger" role="alert">
+                    {{ error }}
+                </div>
+            {% endfor %}
+        </p>
+        <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
+        <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
+        <div>{{ message }}</div>
     </form>
-</main>
-</body>
-</html>
+{% endblock %}
